...


        <include layout="@layout/content_main" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:contentDescription="@string/main_fab"
        android:theme="@style/ThemeOverlay.Material3.FloatingActionButton.Primary"
        app:srcCompat="@android:drawable/ic_input_add"
        app:useCompatPadding="false" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_shop_fab"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="center|center"
        android:layout_gravity="top"
...
        tools:visibility="visible"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:shapeAppearance="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:icon="@drawable/baseline_add_business_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_aisle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_aisle_fab"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="center|center"
        android:layout_gravity="top"
...
        tools:visibility="visible"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:shapeAppearance="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:icon="@drawable/baseline_add_aisle_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_product_fab"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="center|center"
        android:layout_gravity="top"
...
