...
    <!-- Tracking method   -->
    <string name="tracking_mode">Tracking mode</string>
    <string name="tracking_checkbox">Checkbox</string>
    <string name="tracking_quantity">Quantity</string>
    <string name="tracking_checkbox_quantity">Checkbox and Quantity</string>
    <string name="tracking_none">None (swipe only)</string>
    <string name="tracking_default">Default</string>

    <!-- Misc -->
    <string name="aisle">Aisle</string>
    <string name="product">Product</string>
    <string name="add_product">Add Product</string>
    <string name="search">Search</string>
...
    <string name="qty">Qty</string>
    <string name="expand_collapse_aisles">Expand/collapse aisles</string>
    <string name="extra_options">Extra options</string>
    <string name="tab_notes">Notes</string>
    <string name="product_tab_aisles">Aisles</string>
    <string name="product_tab_barcodes">Barcodes</string>
    <string name="product_tab_inventory">Inventory</string>
    <string name="notes_hint">Enter notes here…</string>
    <string name="show_note">Show note</string>
    <string name="note_dialog_title">Note for %1$s</string>
    <string name="loading">Loading…</string>
    <string name="dismiss">Dismiss</string>
    <string name="view_changes">View Changes</string>
...
